--- a/BlogRESTAPI/appsettings.Development.json
+++ b/BlogRESTAPI/appsettings.Development.json
@@ -5,5 +5,9 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+
+  "ConnectionStrings": {
+    "BlogPostConnection": "server=localhost;port=3306;database=blog;user=connectionuser;password=password1"
   }
 }
