--- a/BlogRESTAPI/BlogRESTAPI.csproj
+++ b/BlogRESTAPI/BlogRESTAPI.csproj
@@ -13,5 +13,9 @@
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="3.1.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BlogRESTAPIModels\BlogRESTAPIModels.csproj" />
+  </ItemGroup>
+
 
 </Project>
