test/dev db connection update.

--- a/BlogRESTAPI/appsettings.Development.json
+++ b/BlogRESTAPI/appsettings.Development.json
@@ -8,6 +8,6 @@
   },
 
   "ConnectionStrings": {
-    "BlogPostConnection": "server=localhost;port=3306;database=blog;user=connectionuser;password=password1"
+    "BlogPostConnection": "server=localhost;port=33066;database=blogposts;user=blogpostconn;password=blogpostconn"
   }
 }
